--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-photos",
   "version": "0.1.0",
+  "homepage": "https://unodecopas.github.io/oxygen-react-photos",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
